--- a/index.html
+++ b/index.html
@@ -3,108 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Group Food Order</title>
+    <title>Splittbitte - Group Food Ordering</title>
     <style>
+        /* Base Styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
         body {
-            font-family: Arial, sans-serif;
             background: #f8f9fa;
-            padding: 20px;
-            text-align: center;
+            color: #2c3e50;
+            line-height: 1.6;
         }
-        h1 {
-            color: #343a40;
+
+        /* Navigation */
+        .navbar {
+            background: #2c3e50;
+            padding: 1rem 2rem;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
         }
+
+        .navbar-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            color: white;
+            font-size: 1.5rem;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: #3498db;
+        }
+
+        /* Main Content */
+        .container {
+            max-width: 1200px;
+            margin: 80px auto 40px;
+            padding: 0 20px;
+        }
+
         .restaurant-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            max-width: 800px;
-            margin: 0 auto;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
+            padding: 2rem 0;
         }
-        .restaurant-btn {
-            padding: 20px;
-            background: #fff;
-            border: 2px solid #dee2e6;
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+        .restaurant-card {
+            background: white;
+            border-radius: 10px;
+            padding: 1.5rem;
+            text-align: center;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+            transition: transform 0.3s;
             cursor: pointer;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
-        .restaurant-btn:hover {
+
+        .restaurant-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
         }
+
+        .restaurant-icon {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+        }
+
+        /* Chat Page Styles */
         .chat-container {
-            display: none;
-            margin-top: 20px;
-            text-align: left;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+            padding: 2rem;
+            margin-top: 2rem;
         }
-        .close-btn {
-            background: #dc3545;
-            color: #fff;
-            padding: 10px 20px;
+
+        .back-btn {
+            background: #3498db;
+            color: white;
+            padding: 0.8rem 1.5rem;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            transition: background 0.2s ease;
+            margin-bottom: 1rem;
         }
-        .close-btn:hover {
-            background: #c82333;
+
+        /* Footer */
+        footer {
+            background: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 1.5rem;
+            margin-top: 3rem;
         }
     </style>
 </head>
 <body>
-    <h1>Choose a Restaurant</h1>
-    <div class="restaurant-grid">
-        <button class="restaurant-btn" onclick="openChat('Pizza Hut', '67b4965e1b4fe0190b6eab73')">
-            🍕 Pizza Hut
-        </button>
-        <button class="restaurant-btn" onclick="openChat('Domino\'s', '67b496ae1b4fe0190b6eab7a')">
-            🍕 Domino's
-        </button>
-        <button class="restaurant-btn" onclick="openChat('Burger King', '67b496cf84dc73190e35326f')">
-            🍔 Burger King
-        </button>
-        <button class="restaurant-btn" onclick="openChat('McDonald\'s', '67b49705cf50bc191a8b3834')">
-            🍟 McDonald's
-        </button>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="navbar-content">
+            <a href="index.html" class="logo">Splittbitte</a>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="login.html">Login</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container">
+        <h1>Choose Restaurant</h1>
+        <div class="restaurant-grid">
+            <div class="restaurant-card" onclick="selectRestaurant('pizza-hut')">
+                <div class="restaurant-icon">🍕</div>
+                <h3>Pizza Hut</h3>
+                <p>Group ordering for Pizza Hut</p>
+            </div>
+
+            <div class="restaurant-card" onclick="selectRestaurant('dominos')">
+                <div class="restaurant-icon">🍕</div>
+                <h3>Domino's</h3>
+                <p>Group ordering for Domino's</p>
+            </div>
+
+            <div class="restaurant-card" onclick="selectRestaurant('burger-king')">
+                <div class="restaurant-icon">🍔</div>
+                <h3>Burger King</h3>
+                <p>Group ordering for Burger King</p>
+            </div>
+
+            <div class="restaurant-card" onclick="selectRestaurant('mcdonalds')">
+                <div class="restaurant-icon">🍟</div>
+                <h3>McDonald's</h3>
+                <p>Group ordering for McDonald's</p>
+            </div>
+        </div>
     </div>
 
-    <div id="chatContainer" class="chat-container">
-        <h2 id="chatTitle"></h2>
-        <div id="tawkContainer"></div>
-        <p>Share your UPI ID in the chat to split payments!</p>
-        <button class="close-btn" onclick="closeChat()">Close Chat</button>
-    </div>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2023 Splittbitte. All rights reserved.</p>
+    </footer>
 
     <script>
-        function openChat(restaurant, tawkId) {
-            document.getElementById('chatContainer').style.display = 'block';
-            document.getElementById('chatTitle').textContent = `${restaurant} Chat`;
-            loadTawkScript(tawkId);
-            window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
-        }
-
-        function loadTawkScript(tawkId) {
-            const existingScript = document.getElementById('tawkScript');
-            if (existingScript) {
-                existingScript.remove();
-            }
-
-            const tawkScript = document.createElement('script');
-            tawkScript.id = 'tawkScript';
-            tawkScript.type = 'text/javascript';
-            tawkScript.async = true;
-            tawkScript.src = `https://embed.tawk.to/${tawkId}/default`;
-            tawkScript.charset = 'UTF-8';
-            tawkScript.setAttribute('crossorigin', '*');
-            document.getElementById('tawkContainer').appendChild(tawkScript);
-        }
-
-        function closeChat() {
-            document.getElementById('chatContainer').style.display = 'none';
-            const tawkContainer = document.getElementById('tawkContainer');
-            tawkContainer.innerHTML = ''; // Clear the chat container
+        // Restaurant Selection Handler
+        function selectRestaurant(restaurant) {
+            // Store selection and redirect to chat
+            localStorage.setItem('selectedRestaurant', restaurant);
+            window.location.href = `chat.html?restaurant=${restaurant}`;
         }
     </script>
 </body>
