--- a/index.html
+++ b/index.html
@@ -140,11 +140,16 @@
     <div class="container">
         <h1>Choose Restaurant</h1>
         <div class="restaurant-grid">
-            <div class="restaurant-card" onclick="window.location.href='https://hkkk27.github.io/splittebitecode/'">
+            <div class="restaurant-card" onclick=""redirectToSplitteBiteCode()">
                 <div class="restaurant-icon">🍕</div>
                 <h3>Pizza Hut</h3>
                 <p>Group ordering for Pizza Hut</p>
             </div>
+            <script>
+    function redirectToSplitteBiteCode() {
+        window.location.href = 'https://hkkk27.github.io/splittebitecode/';
+    }
+</script>
 
             <div class="restaurant-card" onclick="selectRestaurant('dominos')">
                 <div class="restaurant-icon">🍕</div>
